<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="165dp"
    android:layout_marginTop="10dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"

    app:cardBackgroundColor="@color/AntlAccentLight"
    app:cardCornerRadius="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/eventCardConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp">

        <ImageView
            android:id="@+id/eventOverviewPicture"
            android:layout_width="286dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/event_overview_event_description"
            app:layout_constraintCircleRadius="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/eventOverviewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/eventOverviewLocation"
            android:layout_alignStart="@+id/eventOverviewLocation"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:inputType="none"
            android:text="@string/event_overview_event_name"
            android:textColor="@color/AntlText"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/eventOverviewPicture"
            app:layout_constraintHorizontal_bias="0.059"
            app:layout_constraintStart_toStartOf="@+id/eventOverviewPicture"
            app:layout_constraintTop_toBottomOf="@+id/eventOverviewPicture" />

        <TextView
            android:id="@+id/eventOverviewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:inputType="none"
            android:text="@string/event_overview_event_location"
            android:textColor="@color/AntlText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/eventOverviewName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/eventOverviewName"
            app:layout_constraintTop_toBottomOf="@+id/eventOverviewName" />

        <ImageView
            android:id="@+id/eventOverviewUserIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="84dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/event_overview_attending_user_icon_description"
            android:src="@drawable/users"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.981"
            app:layout_constraintStart_toStartOf="@+id/eventOverviewLocation"
            app:layout_constraintTop_toBottomOf="@+id/eventOverviewPicture"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/eventOverviewDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/event_overview_day"
            android:textAlignment="center"
            android:textColor="@color/AntlText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/eventOverviewPicture"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/eventOverviewMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_overview_month"
            android:textColor="@color/AntlText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/eventOverviewDay"
            app:layout_constraintStart_toStartOf="@+id/eventOverviewDay"
            app:layout_constraintTop_toBottomOf="@+id/eventOverviewDay" />

        <TextView
            android:id="@+id/eventOverviewAttendingUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/event_overview_attending_users"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.801"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.843" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>