<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AntlBackGround"
    android:padding="8dp"
    tools:context=".ui.start.StartFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="191dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/AntlAccentLight"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/eventOverviewPicture"
                android:layout_width="286dp"
                android:layout_height="114dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                app:layout_constraintCircleRadius="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/event"
                android:contentDescription="@string/event_overview_event_description" />


            <TextView
                android:id="@+id/eventOverviewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/eventOverviewLocation"
                android:layout_alignStart="@+id/eventOverviewLocation"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:inputType="none"
                android:text="@string/event_overview_event_name"
                android:textColor="@color/AntlText"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/eventOverviewPicture"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/eventOverviewPicture"
                app:layout_constraintTop_toBottomOf="@+id/eventOverviewPicture" />

            <TextView
                android:id="@+id/eventOverviewLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:inputType="none"
                android:text="@string/event_overview_event_location"
                android:textColor="@color/AntlText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/eventOverviewName"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/eventOverviewName"
                app:layout_constraintTop_toBottomOf="@+id/eventOverviewName" />

            <ImageView
                android:id="@+id/eventOverviewUserIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="84dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/event_overview_attending_user_icon_description"
                android:src="@drawable/users"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.981"
                app:layout_constraintStart_toStartOf="@+id/eventOverviewLocation"
                app:layout_constraintTop_toBottomOf="@+id/eventOverviewPicture"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/eventOverviewDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:text="@string/event_overview_day"
                android:textAlignment="center"
                android:textColor="@color/AntlText"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.872"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/eventOverviewMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_overview_month"
                android:textColor="@color/AntlText"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/eventOverviewDay"
                app:layout_constraintHorizontal_bias="0.642"
                app:layout_constraintStart_toStartOf="@+id/eventOverviewDay"
                app:layout_constraintTop_toBottomOf="@+id/eventOverviewDay" />

            <TextView
                android:id="@+id/eventOverviewAttendingUsers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/event_overview_attending_users"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.818"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventOverviewMonth"
                app:layout_constraintVertical_bias="0.559" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="540dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@android:drawable/ic_input_add"
        android:tint="@color/AntlAccentLight"
        app:backgroundTint="@color/AntlComplementair"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:rippleColor="@color/AntlPrimary" />
</androidx.constraintlayout.widget.ConstraintLayout>
