<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AntlBackGround"
    tools:context=".ui.friendAddMenu.FriendAddFragment"
    tools:layout_editor_absoluteY="25dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/antl_button_next"
        android:textAlignment="center"
        android:textColor="@color/AntlAccentDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/friend_code_input_label"
            android:textColor="@color/AntlAccentLight"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editFriendCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/friendcode"
            android:textColor="@color/AntlAccentLight"
            app:layout_constraintBottom_toTopOf="@+id/next_button"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/friendCodeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_friend_code_label"
            android:textColor="@color/AntlAccentLight"
            android:layout_marginTop="8dp"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="@+id/editFriendCode"
            app:layout_constraintStart_toStartOf="@+id/editFriendCode"
            app:layout_constraintTop_toBottomOf="@+id/editFriendCode"/>

        <TextView
            android:id="@+id/friendCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Error"
            android:textColor="@color/AntlAccentLight"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="@+id/friendCodeLabel"
            app:layout_constraintStart_toStartOf="@+id/friendCodeLabel"
            app:layout_constraintTop_toBottomOf="@+id/friendCodeLabel"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Share"
            android:textAlignment="center"
            android:textColor="@color/AntlAccentDark"
            app:layout_constraintBottom_toBottomOf="@id/friendCode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>